# murdock-cli

./: Cargo.toml  README.md  openapi.json
api/: README.md
api/docs/: CommitJobApi.md  InformationOfTheCommitToProcess.md  JobModel.md  ManualJobTagParamModel.md  PrJobApi.md  PullRequestInfo.md  ValidationError.md
api/src/apis/: branch_job_api.rs  commit_job_api.rs  mod.rs  tag_job_api.rs
api/src/models/: commit_model.rs  http_validation_error.rs  job_model.rs  manual_job_tag_param_model.rs  pull_request_detailed_information__if_any_.rs  validation_error.rs
murdock-api/: Cargo.toml  README.md
murdock-api/.openapi-generator/: FILES
murdock-api/docs/: BranchJobApi.md  CommitModel.md  JobApi.md  JobsApi.md  ManualJobBranchParamModel.md  ManualJobCommitParamModel.md  PullRequestDetailedInformationIfAny.md  TagJobApi.md
murdock-api/src/apis/: configuration.rs  job_api.rs  jobs_api.rs  pr_job_api.rs
murdock-api/src/models/: information_of_the_commit_to_process.rs  location_inner.rs  manual_job_branch_param_model.rs  manual_job_commit_param_model.rs  mod.rs  pull_request_info.rs
src/: config.rs  main.rs  murdock.rs
