[package]
name = "murdock-cli"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2021"

description = "A CLI client for Murdock-NG"
repository = "https://github.com/murdock-ng/murdock-cli"
homepage = "https://github.com/murdock-ng/murdock-cli"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["cargo", "env"] }
derive_builder = "0.20.1"
indexmap = { version = "2.6.0", features = ["serde"] }
murdock-api = { version = "1.0.0", path = "./murdock-api" }
platform-dirs = "0.3.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["full"] }
